# vlm-dataset-captioner

./: pyproject.toml
.github/workflows/: pypi-publish.yml
vlm_dataset_captioner/: vlm_caption.py  vlm_caption_cli.py
