[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlm_dataset_captioner"
description = "Uses a VLM to caption images from a dataset."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Alex Senden" }]
maintainers = [{ name = "Alex Senden" }]
keywords = [
    "vision-language-model",
    "image-captioning",
    "computer-vision",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "transformers==4.54.1",
    "huggingface-hub==0.34.3",
    "qwen_vl_utils==0.0.11",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "accelerate==1.9.0",
]

# Version is automatically provided by hatch-vcs
dynamic = ["version"]

[project.scripts]
vlm-caption = "vlm_dataset_captioner.vlm_caption_cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["vlm_dataset_captioner/**", "README.md"]

[tool.hatch.build.targets.wheel]
include = ["vlm_dataset_captioner/**"]
